Fixed issue causing automatic page fetching to crash d3, was due to incorrectly setting week offset. shifts will now be automatically fetched.

--- a/time_system/clocker/static/css/manageShifts.css
+++ b/time_system/clocker/static/css/manageShifts.css
@@ -25,3 +25,7 @@ input.icon-input-hide {
     /* width :80%; */
     height: 15em;
 }
+
+#timeline-label {
+    text-align: center;
+}
